# JuEngine-Demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Game/: Assets.hpp  GameController.cpp  GameController.hpp  GamePong.cpp  GamePong.hpp
Game/Features/Camera/: CameraComponent.hpp  CameraSystem.cpp  CameraSystem.hpp
Game/Features/Demo/: DemoSystem.cpp  DemoSystem.hpp
Game/Features/Duck/: DuckComponent.hpp  DuckSystem.cpp  DuckSystem.hpp
Game/Features/Light/: LightComponent.hpp  LightSystem.cpp  LightSystem.hpp
Game/Features/Sun/: SunComponent.hpp  SunSystem.cpp  SunSystem.hpp
Game/Levels/: Demo.cpp  Demo.hpp  MainScreen.cpp  MainScreen.hpp
Game/Prefabs/: Camera.cpp  Camera.hpp  Duck.cpp  Duck.hpp  Grid.cpp  Grid.hpp  Hat.cpp  Hat.hpp  Light.cpp  Light.hpp  ModelTest.cpp  ModelTest.hpp  Sun.cpp  Sun.hpp
Game/Scripts/: Camera.cpp  Camera.hpp  TestMultiple.cpp  TestMultiple.hpp  TestUnique.cpp  TestUnique.hpp
